--- a/res/css/shortpixel-bulk.css
+++ b/res/css/shortpixel-bulk.css
@@ -62,7 +62,7 @@
   box-shadow: none;
 }
 .wrap.is-shortpixel-bulk-page header .top-buttons a:hover, .wrap.is-shortpixel-bulk-page header .top-buttons button:hover {
-  background: #32d7e5;
+  background: rgb(50.3421052632, 215.4868421053, 228.6578947368);
 }
 .wrap.is-shortpixel-bulk-page header .top-buttons a i.switch, .wrap.is-shortpixel-bulk-page header .top-buttons button i.switch {
   width: 18px;
@@ -276,7 +276,7 @@
   width: 30px;
 }
 .wrap.is-shortpixel-bulk-page section.panel.dashboard .bulk-wrapper button.start:hover {
-  background: #1793ab;
+  background: rgb(23.0629370629, 146.5174825175, 170.9370629371);
   color: #fff;
 }
 .wrap.is-shortpixel-bulk-page section.panel.dashboard .bulk-wrapper button.start:disabled {
@@ -491,7 +491,7 @@
   line-height: 1;
 }
 .wrap.is-shortpixel-bulk-page .button:hover {
-  background: #32d7e5;
+  background: rgb(50.3421052632, 215.4868421053, 228.6578947368);
   color: #fff;
 }
 .wrap.is-shortpixel-bulk-page .button .dashicons {
@@ -519,7 +519,7 @@
   transition: all 0.1s ease-in-out;
 }
 .wrap.is-shortpixel-bulk-page .button-primary:hover {
-  background: #32d7e5;
+  background: rgb(50.3421052632, 215.4868421053, 228.6578947368);
 }
 .wrap.is-shortpixel-bulk-page nav {
   margin: 45px 0;
@@ -539,6 +539,7 @@
 .wrap.is-shortpixel-bulk-page .date-picker-container {
   position: relative;
   display: inline-block;
+  margin-top: 20px;
 }
 .wrap.is-shortpixel-bulk-page .date-picker-container .the-datepicker__container {
   margin-top: 4px;
@@ -557,7 +558,6 @@
   background-position: 5px center;
   padding: 6px 6px 6px 25px;
   margin-left: 8px;
-  margin-top: 25px;
 }
 .wrap.is-shortpixel-bulk-page .wrap-collap .collap-content {
   display: none;
@@ -647,6 +647,7 @@
   background: #fff;
   border-radius: 16px;
   box-shadow: 1px 0px 4px 0px rgba(0, 0, 0, 0.12);
+  overflow: hidden;
 }
 .wrap.is-shortpixel-bulk-page .panel.active {
   visibility: visible;
@@ -708,7 +709,7 @@
   transition: all 900ms;
 }
 .wrap.is-shortpixel-bulk-page .processor-paused:hover {
-  background: #1ca9b3;
+  background: rgb(27.5926724138, 169.1163793103, 178.9073275862);
 }
 .wrap.is-shortpixel-bulk-page .processor-paused .dashicons {
   margin-right: 6px;
@@ -916,7 +917,7 @@
 }
 .wrap.is-shortpixel-bulk-page section.panel.selection .option-block {
   margin: 0 auto;
-  width: 90%;
+  width: 88%;
   background-color: #F4FBFC;
   padding: 12px;
 }
@@ -931,7 +932,7 @@
   display: flex;
   background-color: #F4FBFC;
   margin: 0 auto 5px;
-  width: 90%;
+  width: 88%;
   padding: 12px;
   align-items: center;
 }
@@ -1248,8 +1249,9 @@
   display: table;
   width: 80%;
   margin: 30px auto 0;
-  border-radius: 16px;
+  border-radius: 15px;
   background-color: #F4FBFC;
+  overflow: hidden;
 }
 .wrap.is-shortpixel-bulk-page section.panel.process .bulk-summary > div,
 .wrap.is-shortpixel-bulk-page section.panel.finished .bulk-summary > div {
@@ -1264,6 +1266,7 @@
 .wrap.is-shortpixel-bulk-page section.panel.process .bulk-summary p.finished-paragraph,
 .wrap.is-shortpixel-bulk-page section.panel.finished .bulk-summary p.finished-paragraph {
   padding: 6px 12px;
+  text-align: center;
 }
 .wrap.is-shortpixel-bulk-page section.panel.process .bulk-summary .heading,
 .wrap.is-shortpixel-bulk-page section.panel.finished .bulk-summary .heading {
@@ -1512,7 +1515,7 @@
 .wrap.is-shortpixel-bulk-page section.panel.process nav,
 .wrap.is-shortpixel-bulk-page section.panel.finished nav {
   width: 80%;
-  margin-top: 35px;
+  margin: 35px auto 0 auto;
 }
 .wrap.is-shortpixel-bulk-page section.panel.finished .spio-progressbar .select .line,
 .wrap.is-shortpixel-bulk-page section.panel.finished .spio-progressbar .summary .line,
@@ -1562,6 +1565,11 @@
   dominant-baseline: middle;
   text-anchor: middle;
 }
+.wrap.is-shortpixel-bulk-page section.panel.finished .dashboard-text {
+  display: flex;
+  width: 170px;
+  margin: auto;
+}
 .wrap.is-shortpixel-bulk-page section.panel.finished nav {
   text-align: center;
   margin: 25px auto;
@@ -1575,7 +1583,7 @@
   transition: all 0.5s ease;
 }
 .wrap.is-shortpixel-bulk-page section.panel.finished nav button.finish:hover {
-  background: #24d1dd;
+  background: rgb(36.2392241379, 209.2887931034, 221.2607758621);
 }
 .wrap.is-shortpixel-bulk-page .part-debug {
   background: #000;
