--- a/res/scss/shortpixel-bulk.scss
+++ b/res/scss/shortpixel-bulk.scss
@@ -63,10 +63,7 @@
     border-radius: 3px;
     border: 1px solid $blue_default;
     transition: all 0.1s ease-in-out;
-  //  min-height: 44px;
     line-height: 1;
-
-    
 
     &:hover {
       background: lighten($blue_default, 10%);
@@ -134,6 +131,7 @@
 
       position: relative;
       display: inline-block;
+      margin-top: 20px;
 
       // Date Picker tweaks / fixes 
 
@@ -158,7 +156,7 @@
         background-position: 5px center; 
         padding: 6px 6px 6px 25px ;
         margin-left: 8px;
-        margin-top: 25px;
+        //margin-top: 25px;
       }
 
   }
@@ -278,6 +276,7 @@
     background: #fff;
     border-radius: 16px;
     box-shadow: 1px 0px 4px 0px rgba(0, 0, 0, 0.12);
+    overflow: hidden;
 
     &.active {
       visibility: visible;
@@ -595,7 +594,7 @@
 
     .option-block {
       margin: 0 auto;
-      width: 90%;
+      width: 88%;
       background-color: $blue_background;
       padding: 12px;
 
@@ -615,7 +614,7 @@
        display: flex; 
        background-color: $blue_background;
        margin: 0 auto 5px;
-       width: 90%;
+       width: 88%;
        padding: 12px;
        align-items: center; 
 
@@ -1081,8 +1080,9 @@ section.panel.finished {
     display: table;
     width: 80%;
     margin: 30px auto 0;
-    border-radius: 16px;
+    border-radius: 15px;
     background-color: $blue_background;
+    overflow: hidden;
 
     >div {
       display: table-row;
@@ -1096,6 +1096,7 @@ section.panel.finished {
     p.finished-paragraph
     {
        padding: 6px 12px;
+       text-align: center;
     }
 
     .heading {
@@ -1390,10 +1391,7 @@ section.panel.finished {
 
 nav {
   width: 80%;
-  margin-top: 35px;
-
-
-
+  margin: 35px auto 0 auto;
 }
 
 }
@@ -1473,6 +1471,11 @@ section.panel.finished {
      }
    } // optimization circle. 
  
+  .dashboard-text {
+    display: flex;
+    width: 170px;
+    margin: auto;
+  }  
 
   nav {
     text-align: center;
